--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "devDependencies": {
         "tslint": "^6.0.0",
         "typescript": "^3.8.3",
-        "uglify-js": "^3.8.0"
+        "uglify-es": "^3.3.9"
     }
 }
